--- a/.gitignore
+++ b/.gitignore
@@ -22,4 +22,6 @@ scripts/Small_Intestine.def.coverage.bedgraph
 scripts/Small_Intestine.def.junctions.bed_bundle.txt
 scripts/liver.processtiebrush_round2.tsstes.ptf_with_labels.txt
 
-test/
+test/Small_Intestine.def.coverage.bigwig
+test/Small_Intestine.def.junctions.bed
+test/chess3.0.1.gtf
