--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,7 @@ scripts/liver.processtiebrush_round2.tsstes.ptf_with_labels.txt
 test/Small_Intestine.def.coverage.bigwig
 test/Small_Intestine.def.junctions.bed
 test/chess3.0.1.gtf
+test/Small_Intestine.*
+test/Small_Intestine.def.coverage.bigwig
+test/Small_Intestine.def.junctions.bed
+test/chess3.0.1.gtf
