--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,13 +11,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-14]     # macOS 14 runners are arm64
+        os: [ubuntu-latest, macos-14]  # macOS 14 runners are arm64
         python-version: ['3.10', '3.11', '3.12']
 
     env:
-      PREFIX: ${{ runner.temp }}/local
-      BIN_DIR: ${{ runner.temp }}/local/bin
-      SHARE_DIR: ${{ runner.temp }}/local/share/splicecov
+      PREFIX: ${{ github.workspace }}/.local
+      BIN_DIR: ${{ github.workspace }}/.local/bin
+      SHARE_DIR: ${{ github.workspace }}/.local/share/splicecov
 
     steps:
       - uses: actions/checkout@v4
@@ -31,8 +31,8 @@ jobs:
         if: hashFiles('requirements.txt') != ''
         run: python -m pip install --upgrade pip && pip install -r requirements.txt
 
-      # Install UCSC tools for both directions
-      - name: Install UCSC bigWigToBedGraph (Linux)
+      # UCSC tools (Linux)
+      - name: Install bigWigToBedGraph (Linux)
         if: startsWith(matrix.os, 'ubuntu')
         run: |
           mkdir -p "$BIN_DIR"
@@ -41,7 +41,7 @@ jobs:
           echo "$BIN_DIR" >> $GITHUB_PATH
           bigWigToBedGraph -h | head -n1
 
-      - name: Install UCSC bedGraphToBigWig (Linux)
+      - name: Install bedGraphToBigWig (Linux)
         if: startsWith(matrix.os, 'ubuntu')
         run: |
           mkdir -p "$BIN_DIR"
@@ -50,7 +50,8 @@ jobs:
           echo "$BIN_DIR" >> $GITHUB_PATH
           bedGraphToBigWig 2>&1 | head -n1 || true
 
-      - name: Install UCSC bigWigToBedGraph (macOS arm64)
+      # UCSC tools (macOS arm64)
+      - name: Install bigWigToBedGraph (macOS arm64)
         if: startsWith(matrix.os, 'macos')
         run: |
           mkdir -p "$BIN_DIR"
@@ -59,7 +60,7 @@ jobs:
           echo "$BIN_DIR" >> $GITHUB_PATH
           bigWigToBedGraph -h | head -n1
 
-      - name: Install UCSC bedGraphToBigWig (macOS arm64)
+      - name: Install bedGraphToBigWig (macOS arm64)
         if: startsWith(matrix.os, 'macos')
         run: |
           mkdir -p "$BIN_DIR"
@@ -89,8 +90,8 @@ jobs:
 
     env:
       MSYS2_PATH_TYPE: inherit
-      PREFIX: /c/Users/runneradmin/AppData/Local/splicecov
-      BIN_DIR: /c/Users/runneradmin/AppData/Local/splicecov/bin
+      PREFIX: ${{ github.workspace }}/.local
+      BIN_DIR: ${{ github.workspace }}/.local/bin
 
     steps:
       - uses: actions/checkout@v4
@@ -147,4 +148,3 @@ jobs:
           PATH: ${{ env.BIN_DIR }}:/usr/bin:/bin:/mingw64/bin:/mingw32/bin:$PATH
         run: |
           bash test/smoke.sh
-
